deploy/kubernetes/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: documentation
spec:
  replicas: 1
  selector:
    matchLabels:
      app: documentation
  template:
    metadata:
      labels:
        app: documentation
    spec:
      nodeSelector:
        "beta.kubernetes.io/os": linux
      containers:
        - name: documentation
          image: steeltoe.azurecr.io/documentation
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: documentation-service
  namespace: documentation
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  selector:
    app: documentation
