deploy/kubernetes/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: documentation-service
  namespace: documentation
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  selector:
    app: documentation
