deploy/kubernetes/manifest.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: documentation
  namespace: website
spec:
  replicas: 1
  selector:
    matchLabels:
      app: documentation
  template:
    metadata:
      labels:
        app: documentation
    spec:
      nodeSelector:
        "beta.kubernetes.io/os": linux
      containers:
        - name: documentation
          image: steeltoe.azurecr.io/documentation
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: documentation-service
  namespace: website
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  selector:
    app: documentation
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: documentation-ingress
  namespace: website
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: docs-dev.steeltoe.io
      http:
        paths:
          - path: /(.*)
            pathType: ImplementationSpecific
            backend:
              serviceName: documentation-service
              servicePort: 80
